@@ -2,6 +2,8 @@
 	* common/map.c: Fix signed/unsigned issue resulting in crash.
 	* client/gtk/develop.c, client/gtk/frontend.h: Fixed compiler warning
 	introduced 2012-12-18.
+	* client/ai/greedy.c: Fixed random chat messages (behaviour matches the
+	function name again).
 
 2013-01-19  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/connect.c: Clear the list of games and set focus to the
